17648
Tab completion works fine on a string literal:
```scala
Welcome to Scala version 2.10.0-RC2 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_37).
Type in expressions to have them evaluated.
Type :help for more information.

scala> "foo".s
split         startsWith    subSequence   substring     
```

But if the string contains a comma:
```scala
scala> "foo,bar".s<console>:1: error: unclosed string literal
bar"
   ^
```
